# PPView

Grid/: MJSquareGrid.h  (+1 more)
PPView/Route/: CMakeLists.txt  LightPlan.cpp  LightPlan.h  PlanThroughtPois.cpp  PlanThroughtPois.h  Planner.cpp  Planner.h  PostProcessor.cpp  PostProcessor.cpp.orig  PostProcessor.h  Processor.cpp  Processor.h  Reference  Route.cpp  Route.h  TourSet.cpp  TourSet.h  case.txt  changeIdin  hget.py  rebuild.sh  test  testEden.cpp  testView.cpp  trasform.py
PPView/Route/bag/: BagPlan.cpp  BagPlan.h  BagSearch.cpp  BagSearch.h  CMakeLists.txt  DFS.cpp  DFS.h  DFSWorker.cpp  DFSWorker.h  DFSearch.cpp  DFSearch.h  MyCluster.cpp  MyCluster.h  MyThreadPool.cpp  MyThreadPool.h  RouteSearch.cpp  RouteSearch.h  RouteWorker.cpp  RouteWorker.h  SPath.cpp  SPath.h  SPathAlloc.h  SPathHeap.cpp  SPathHeap.h  StaticRand.cpp  StaticRand.h  ThreadMemPool.cpp  ThreadMemPool.h
PPView/Route/base/: BagParam.cpp  BagParam.h  BasePlan.cpp  BasePlan.h  CMakeLists.txt  ConstDataCheck.cpp  ConstDataCheck.h  DataChecker.cpp  DataChecker.h  DataList.cpp  DataList.h  KeyNodeBuilder.cpp  KeyNodeBuilder.h  LYConstData.cpp  LYConstData.h  LogDump.cpp  LogDump.h  PathCross.cpp  PathCross.h  PathEval.cpp  PathEval.h  PathPerfect.cpp  PathPerfect.h  PathStat.cpp  PathStat.h  PathTraffic.cpp  PathTraffic.h  PathUtil.cpp  PathUtil.h  PathView.cpp  PathView.h  PlaceGroup.cpp  PlaceGroup.h  PlaceInfoAlloc.cpp  PlaceInfoAlloc.h  Prefer.h  PrivateConstData.cpp  PrivateConstData.h  RealTimeTraffic.cpp  RealTimeTraffic.h  (+20 more)
PPView/Route/basis/: CMakeCache.txt  CMakeLists.txt  DayPathExpandTest.cpp  DaysPlan.cpp  DaysPlan.h  ExpandCase.txt  Makefile  NodeJ.cpp  NodeJ.h  OptCase.txt  PathGenerator.cpp  PathGenerator.h  PathGeneratorTest.cpp  Ptest  case.py  change  cmake_install.cmake  docs  hash  rebuild.sh  selectCase.txt  tags  testMJSquareGrid.cpp  timeCase.txt
PPView/Route/basis/pathGenerator/: PathGenerator.cpp  PathGenerator.h  PathGeneratorTest.cpp
PPView/Route/vlist/: CMakeLists.txt  FiltCons.h  HotelRankProcessor.cpp  HotelRankProcessor.h  PoiRanker.cpp  PoiRanker.h  RankProcessor.h  RestaurantRankProcessor.cpp  RestaurantRankProcessor.h  ShopRankProcessor.cpp  ShopRankProcessor.h  ViewRankProcessor.cpp  ViewRankProcessor.h  ViewShopRankProcessor.cpp  ViewShopRankProcessor.h
PPView/Server/: CMakeLists.txt  MQConsumer.cpp  MQConsumer.h  MQProducer.cpp  MQProducer.h  MQQueryProcessor.cpp  MQQueryProcessor.h  MYHotUpdate.cpp  MYHotUpdate.h  MyConfig.cpp  MyConfig.h  PPViewChat  daemon_PPViewChat.sh  main.cpp  restart.sh  start.sh  stop.sh  worker.cpp  worker.h
common/: .gitignore  CMakeLists.txt  ChangeLog  README  TODO  build.sh  build_debug.sh  install.sh  install_lib.sh
common/src/: AuxTools.cpp  AuxTools.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Configuration.cpp  Configuration.h  MJCommon.h  MJDataProc.cpp  MJDataProc.h  MJLog.cpp  MJLog.h  MJSquareGrid.cpp  MJSquareGrid.h  MyConnectPool.h  MyPika.cpp  MyPika.h  MyRabbitMQ.cpp  MyRabbitMQ.h  MyRedis.cpp  MyRedis.h  MySsdb.cpp  MySsdb.h  MyTime.h  MyTimer.h  Mysql.cpp  Mysql.h  ServiceLog.h  SocketClient.cpp  SocketClient.h  SocketClientAsyn.cpp  SocketClientAsyn.h  SocketClientEpoll.cpp  SocketClientEpoll.h  SocketUtil.cpp  SocketUtil.h
common/src/extra/: CMakeLists.txt  FuncSet.cpp  FuncSet.h  README  Segmentor.cpp  Segmentor.h  TimeIR.cpp  TimeIR.h
common/src/extra/string/: StringTools.cpp  StringTools.h  algorithm.cpp  algorithm.h  compare.h  string_number.cpp  string_number.h  string_piece.cpp
common/src/extra/string/_inner/: scoped_ptr.h  strict_bool.h  type_traits.h
common/src/http/: CMakeLists.txt  HttpDefine.cpp  HttpDefine.h  MJHotUpdate.cpp  MJHotUpdate.h  MJHttpShell.h  QueryProcessor.cpp  QueryProcessor.h  SocketClientEpoll.cpp  SocketClientEpoll.h  mj_loader.cpp
common/src/share/: README
common/src/share/boost/: CMakeLists.txt  libboost_atomic.so.1.64.0  libboost_chrono.so.1.64.0  libboost_container.so.1.64.0  libboost_context.so.1.64.0  libboost_coroutine.so.1.64.0  libboost_date_time.so.1.64.0  libboost_fiber.so.1.64.0  libboost_filesystem.so.1.64.0  libboost_graph.so.1.64.0  libboost_iostreams.so.1.64.0  libboost_locale.so.1.64.0  libboost_log.so.1.64.0  libboost_log_setup.so.1.64.0  libboost_math_c99.so.1.64.0  libboost_math_c99f.so.1.64.0  libboost_math_c99l.so.1.64.0  libboost_math_tr1.so.1.64.0  libboost_math_tr1f.so.1.64.0  libboost_math_tr1l.so.1.64.0  libboost_prg_exec_monitor.so.1.64.0  libboost_program_options.so.1.64.0  libboost_python.so.1.64.0  libboost_random.so.1.64.0  libboost_regex.so.1.64.0  libboost_serialization.so.1.64.0  libboost_signals.so.1.64.0  libboost_system.so.1.64.0  libboost_thread.so.1.64.0  libboost_timer.so.1.64.0  libboost_type_erasure.so.1.64.0  libboost_unit_test_framework.so.1.64.0  libboost_wave.so.1.64.0  libboost_wserialization.so.1.64.0
common/src/share/glog/: CMakeLists.txt  libglog.so.0.3.4
common/src/share/glog/glog/: logging.h
common/src/share/hiredis/: CMakeLists.txt  libhiredis.so.0.13
common/src/share/json/: CMakeLists.txt  json_value.cpp  json_writer.cpp
common/src/share/json/json/: json.hpp  value.h
common/src/share/libevent/: CMakeLists.txt  libevent-2.0.so.5.1.9  libevent_core-2.0.so.5.1.9  libevent_extra-2.0.so.5.1.9  libevent_openssl-2.0.so.5.1.9  libevent_pthreads-2.0.so.5.1.9
common/src/share/loader/: CMakeLists.txt  case.list  mj_loader.py
common/src/share/mysql/: CMakeLists.txt
common/src/share/protobuf/: CMakeLists.txt  protoc
common/src/share/rabbitmq-c/: CMakeLists.txt  librabbitmq.so.4.2.0
common/src/share/rapidjson/: CMakeLists.txt
common/src/share/ssdb/: CMakeLists.txt
common/src/share/ssdb/ssdb/: SSDB_client.h
common/src/share/tcmalloc/: CMakeLists.txt  libtcmalloc_minimal.so.4.3.0
common/src/share/thrift/: CMakeLists.txt  build.sh  libthrift.so.0.10.0  libthriftc.so.0.10.0  libthriftnb.so.0.10.0  libthriftz.so.0.10.0
common/src/tests/: CMakeLists.txt  ThreadPoolTest.cpp  dateTimeTest2.cpp  datetimeTest.cpp  redis_test.cpp  test_redis_expire.cpp
common/src/threads/: MyThreadPool.cpp  wait_list.hpp
(+62 files in other folders)
