#include_directories(../threads/)
#add_executable (ThreadPoolTest 
#    ../../src/threads/Condition.cpp
#    ../../src/threads/CountDownLatch.cpp
#    ../../src/threads/MyThreadPool.cpp
#    ../../src/threads/Thread.cpp
#    ../../src/threads/ThreadPool.cpp
#    ThreadPoolTest.cpp
#    )
#install(TARGETS ThreadPoolTest DESTINATION bin)
