#boost 1.64.0



install(DIRECTORY boost DESTINATION include)
install(FILES libboost_regex.so.1.64.0 DESTINATION lib)
install(FILES libboost_regex.so DESTINATION lib)
install(FILES libboost_system.so.1.64.0 DESTINATION lib)
install(FILES libboost_system.so DESTINATION lib)
install(FILES libboost_python.so.1.64.0 DESTINATION lib)
install(FILES libboost_python.so DESTINATION lib)
install(FILES libboost_date_time.so.1.64.0 DESTINATION lib)
install(FILES libboost_date_time.so DESTINATION lib)
install(FILES libboost_iostreams.so.1.64.0 DESTINATION lib)
install(FILES libboost_iostreams.so DESTINATION lib)
install(FILES libboost_thread.so.1.64.0 DESTINATION lib)
install(FILES libboost_thread.so DESTINATION lib)

install(FILES libboost_atomic.so.1.64.0 DESTINATION lib)
install(FILES libboost_atomic.so DESTINATION lib)

install(FILES libboost_chrono.so.1.64.0 DESTINATION lib)
install(FILES libboost_chrono.so DESTINATION lib)

install(FILES libboost_container.so.1.64.0 DESTINATION lib)
install(FILES libboost_container.so DESTINATION lib)

install(FILES libboost_context.so.1.64.0 DESTINATION lib)
install(FILES libboost_context.so DESTINATION lib)

install(FILES libboost_coroutine.so.1.64.0 DESTINATION lib)
install(FILES libboost_coroutine.so DESTINATION lib)

install(FILES libboost_fiber.so.1.64.0 DESTINATION lib)
install(FILES libboost_fiber.so DESTINATION lib)

install(FILES libboost_filesystem.so.1.64.0 DESTINATION lib)
install(FILES libboost_filesystem.so DESTINATION lib)

install(FILES libboost_graph.so.1.64.0 DESTINATION lib)
install(FILES libboost_graph.so DESTINATION lib)

install(FILES libboost_locale.so.1.64.0 DESTINATION lib)
install(FILES libboost_locale.so DESTINATION lib)

install(FILES libboost_log_setup.so.1.64.0 DESTINATION lib)
install(FILES libboost_log_setup.so DESTINATION lib)

install(FILES libboost_log.so.1.64.0 DESTINATION lib)
install(FILES libboost_log.so DESTINATION lib)

install(FILES libboost_math_c99f.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_c99f.so DESTINATION lib)

install(FILES libboost_math_c99l.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_c99l.so DESTINATION lib)

install(FILES libboost_math_c99.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_c99.so DESTINATION lib)

install(FILES libboost_math_tr1f.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_tr1f.so DESTINATION lib)

install(FILES libboost_math_tr1l.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_tr1l.so DESTINATION lib)

install(FILES libboost_math_tr1.so.1.64.0 DESTINATION lib)
install(FILES libboost_math_tr1.so DESTINATION lib)

install(FILES libboost_prg_exec_monitor.so.1.64.0 DESTINATION lib)
install(FILES libboost_prg_exec_monitor.so DESTINATION lib)

install(FILES libboost_program_options.so.1.64.0 DESTINATION lib)
install(FILES libboost_program_options.so DESTINATION lib)

install(FILES libboost_random.so.1.64.0 DESTINATION lib)
install(FILES libboost_random.so DESTINATION lib)

install(FILES libboost_serialization.so.1.64.0 DESTINATION lib)
install(FILES libboost_serialization.so DESTINATION lib)

install(FILES libboost_signals.so.1.64.0 DESTINATION lib)
install(FILES libboost_signals.so DESTINATION lib)

install(FILES libboost_timer.so.1.64.0 DESTINATION lib)
install(FILES libboost_timer.so DESTINATION lib)

install(FILES libboost_type_erasure.so.1.64.0 DESTINATION lib)
install(FILES libboost_type_erasure.so DESTINATION lib)

install(FILES libboost_unit_test_framework.so.1.64.0 DESTINATION lib)
install(FILES libboost_unit_test_framework.so DESTINATION lib)

install(FILES libboost_wave.so.1.64.0 DESTINATION lib)
install(FILES libboost_wave.so DESTINATION lib)

install(FILES libboost_wserialization.so.1.64.0 DESTINATION lib)
install(FILES libboost_wserialization.so DESTINATION lib)
