#mysql客户端so



#install(DIRECTORY hiredis DESTINATION include)
install(FILES libmysqlclient_r.so.16.0.0 DESTINATION lib)
install(FILES libmysqlclient_r.so DESTINATION lib)
install(FILES libmysqlclient_r.so.16 DESTINATION lib)
install(FILES libmysqlclient.so.16.0.0 DESTINATION lib)
install(FILES libmysqlclient.so DESTINATION lib)
install(FILES libmysqlclient.so.16 DESTINATION lib)
